// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SegmentedControl > should receive onChange event when segmented control item is clicked 1`] = `
<div>
  <div
    class="segmentedControl"
  >
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeNormal segmentedControlInputActive"
    >
      <button
        data-testid="test-my-primary-normal-segmented-control_first-segmented-control"
        id="my-primary-normal-segmented-control_first"
        name="my-primary-normal-segmented-control_first"
        type="button"
      >
        First
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeNormal segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-primary-normal-segmented-control_second-segmented-control"
        id="my-primary-normal-segmented-control_second"
        name="my-primary-normal-segmented-control_second"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeNormal segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-primary-normal-segmented-control_third-segmented-control"
        id="my-primary-normal-segmented-control_third"
        name="my-primary-normal-segmented-control_third"
        type="button"
      >
        Third
      </button>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl > should render a primary normal SegmentedControl 1`] = `
<div>
  <div
    class="segmentedControl"
  >
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeNormal segmentedControlInputActive"
    >
      <button
        data-testid="test-my-primary-normal-segmented-control_first-segmented-control"
        id="my-primary-normal-segmented-control_first"
        name="my-primary-normal-segmented-control_first"
        type="button"
      >
        First
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeNormal segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-primary-normal-segmented-control_second-segmented-control"
        id="my-primary-normal-segmented-control_second"
        name="my-primary-normal-segmented-control_second"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeNormal segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-primary-normal-segmented-control_third-segmented-control"
        id="my-primary-normal-segmented-control_third"
        name="my-primary-normal-segmented-control_third"
        type="button"
      >
        Third
      </button>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl > should render a primary small SegmentedControl 1`] = `
<div>
  <div
    class="segmentedControl"
  >
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeSmall segmentedControlInputActive"
    >
      <button
        data-testid="test-my-primary-small-segmented-control_first-segmented-control"
        id="my-primary-small-segmented-control_first"
        name="my-primary-small-segmented-control_first"
        type="button"
      >
        First
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeSmall segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-primary-small-segmented-control_second-segmented-control"
        id="my-primary-small-segmented-control_second"
        name="my-primary-small-segmented-control_second"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindPrimary segmentedControlInputSizeSmall segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-primary-small-segmented-control_third-segmented-control"
        id="my-primary-small-segmented-control_third"
        name="my-primary-small-segmented-control_third"
        type="button"
      >
        Third
      </button>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl > should render a secondary normal SegmentedControl 1`] = `
<div>
  <div
    class="segmentedControl"
  >
    <div
      class="segmentedControlItem segmentedControlInputKindSecondary segmentedControlInputSizeNormal segmentedControlInputActive"
    >
      <button
        data-testid="test-my-secondary-normal-segmented-control_first-segmented-control"
        id="my-secondary-normal-segmented-control_first"
        name="my-secondary-normal-segmented-control_first"
        type="button"
      >
        First
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindSecondary segmentedControlInputSizeNormal segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-secondary-normal-segmented-control_second-segmented-control"
        id="my-secondary-normal-segmented-control_second"
        name="my-secondary-normal-segmented-control_second"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindSecondary segmentedControlInputSizeNormal segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-secondary-normal-segmented-control_third-segmented-control"
        id="my-secondary-normal-segmented-control_third"
        name="my-secondary-normal-segmented-control_third"
        type="button"
      >
        Third
      </button>
    </div>
  </div>
</div>
`;

exports[`SegmentedControl > should render a secondary small SegmentedControl 1`] = `
<div>
  <div
    class="segmentedControl"
  >
    <div
      class="segmentedControlItem segmentedControlInputKindSecondary segmentedControlInputSizeSmall segmentedControlInputActive"
    >
      <button
        data-testid="test-my-secondary-small-segmented-control_first-segmented-control"
        id="my-secondary-small-segmented-control_first"
        name="my-secondary-small-segmented-control_first"
        type="button"
      >
        First
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindSecondary segmentedControlInputSizeSmall segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-secondary-small-segmented-control_second-segmented-control"
        id="my-secondary-small-segmented-control_second"
        name="my-secondary-small-segmented-control_second"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="segmentedControlItem segmentedControlInputKindSecondary segmentedControlInputSizeSmall segmentedControlInputInactive"
    >
      <button
        data-testid="test-my-secondary-small-segmented-control_third-segmented-control"
        id="my-secondary-small-segmented-control_third"
        name="my-secondary-small-segmented-control_third"
        type="button"
      >
        Third
      </button>
    </div>
  </div>
</div>
`;
